dotnet-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-core
  labels:
    app: dotnet-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnet-core
  template:
    metadata:
      labels:
        app: dotnet-core
    spec:
      containers:
      - name: dotnetcore 
        image: microsoft/dotnet-samples:aspnetapp
        ports:
        - containerPort: 80
