dotnet-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-core
  labels:
    app: dotnet-core
spec:
  selector:
    app: dotnet-core
  ports:
  - port: 80
    protocol: TCP
