nginx-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-external
  labels:
    app: nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
    # replace with the correct value of the generated certificate in the AWS console
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-west-2:XXXXXXXX:certificate/XXXXXX-XXXXXXX-XXXXXXX-XXXXXXXX"
    # the backend instances are HTTP
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    # Map port 443
    # service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    # Increase the ELB idle timeout to avoid issues with WebSockets or Server-Sent Events.
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '3600'
    # Internal ALB
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
  type: LoadBalancer
