example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"test-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"echoheaders-x","servicePort":80},"path":"/echoheaders"},{"backend":{"serviceName":"nginx-service","servicePort":80},"path":"/nginx"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: null
  generation: 1
  name: test-ingress
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/test-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: echoheaders-x
          servicePort: 80
        path: /echoheaders/
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /nginx/
      - backend:
          serviceName: dotnet-core
          servicePort: 80
        path: /dotnetcore/
status:
  loadBalancer: {}
